# Viral

./: CMakeLists.txt  README.md  cluster_host.xml  cluster_platform.xml  exampe.cpp  external_monitor.cpp  immediate_send.cpp  large_network.xml  large_network_1000.xml  large_network_1500.xml  monitor.cpp  platform_file.xml  power_consumption_balancing.cpp  prevalence.cpp  shortest_path.cpp  zones_without_routing.xml
cmake/: README.md
config/: cluster_host.xml  large_network_alternative_path.xml  platform_file_zone.xml
include/: gbfs.h  monitor.h
src/: CMakeLists.txt  gbfs.cpp  immediate_send.cpp  monitor.cpp  result_migration.cpp
tests/: CMakeLists.txt
